--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
             "version": "4.2.0"
         },
         "tns-ios": {
-            "version": "4.2.0"
+            "version": "4.3.0-2018-09-19-01"
         }
     },
     "description": "NativeScript Application",
@@ -26,7 +26,7 @@
         "nativescript-theme-core": "~1.0.4",
         "reflect-metadata": "~0.1.8",
         "rxjs": "~6.2.0",
-        "tns-core-modules": "~4.2.0",
+        "tns-core-modules": "~4.2.1",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
