--- a/firebase.nativescript.json
+++ b/firebase.nativescript.json
@@ -16,7 +16,7 @@
     "google_auth": false,
     "admob": false,
     "invites": false,
-    "dynamic_links": false,
+    "dynamic_links": true,
     "ml_kit": true,
     "ml_kit_text_recognition": true,
     "ml_kit_barcode_scanning": false,
